# gitlab-auto-assignment-responsible

./: .gitlab-ci.yml  README.md
Gitlab/: gitlab_auto_responsible.yml
Python/: README.rst  main.py  pyproject.toml  python_auto_responsible.yml  requirements.txt  settings.py
